[package]
name = "tokio-anon-pipe"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
tokio = { version = "1.7.0", features = ["net"] }

[dev-dependencies]
tokio = { version = "1.7.0", features = ["macros", "rt", "io-util"] }
